<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:contentPadding="16dp"
    app:cardBackgroundColor="@color/light_gray"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/reward_object_img"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/treasure"
            android:contentDescription="@string/img_desc"
            />

        <TextView
            android:id="@+id/reward_object_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            tools:text="奖品名称"
            />

        <TextView
            android:id="@+id/reward_object_intro_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="@string/tool_short_text"
            />

        <TextView
            android:id="@+id/reward_object_store_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:drawableStart="@drawable/ic_home_black_24dp"
            android:drawablePadding="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/reward_object_store_name_hint"
            tools:text="商铺：XXX"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>